# rust-actix-web-opentelemetry-jaeger-docker

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20240706051610_init.down.sql  20240706051610_init.up.sql
src/: handler.rs  main.rs  model.rs
